--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+html {
+  @apply bg-darkbc;
+}
+html,
+body {
+  min-height: 100%;
+}
+h2 {
+  @apply text-2xl md:text-3xl text-white;
+}
+h3 {
+  @apply text-lg md:text-xl text-white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .container {
+    @apply mx-auto px-5 h-auto;
+  }
+  .nav-item {
+    @apply block text-lg text-white py-3 mx-9 sm:py-0 sm:mx-4 cursor-pointer relative;
+  }
+  .active {
+    @apply font-extrabold;
+  }
+  .nav-underline {
+    @apply absolute top-[30px] left-0 h-1 w-0 group-hover:w-full bg-purple  transition-all duration-200 ease-in-out hidden sm:block rounded-md;
+  }
+  .nav-underlined {
+    @apply w-full;
+  }
+  .mobile-icon {
+    @apply sm:hidden text-white cursor-pointer absolute z-0 right-[5vw] top-4;
+  }
+  .button {
+    @apply rounded-md text-white  py-1 px-5  inline-block hover:scale-110 bg-purple hover:bg-[#1846F3] transition-all active:bg-blue-900 active:scale-95;
+  }
+  @keyframes pulse {
+    0%,
+    100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+  }
+  .pulsing {
+    animation: pulse 2s ease 0s infinite;
+  }
+  .h-underline {
+    @apply mt-2 md:h-3 h-2 md:w-28 w-20 bg-purple absolute rounded-lg;
+  }
+  .paragraph {
+    @apply sm:text-base text-[13px] text-textl text-justify;
+    /* max-w-[50%] */
+  }
+  @keyframes fromLeft {
+    from {
+      opacity: 0;
+      x: -400;
+    }
+    to {
+      opacity: 1;
+      x: 0;
+    }
+  }
+
+  @keyframes fromRight {
+    from {
+      opacity: 0;
+      x: 400;
+    }
+    to {
+      opacity: 1;
+      x: 0;
+    }
+  }
 }
